# CanadaLottoGenerator

./: .bumpversion.cfg  .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  docs.yml  release.yml  tag-release.yml
.hypothesis/constants/: 0d0c4fcd28836cd2  1cfa8513dfd4b8c8  ae1c9e92860a21a5  daebc9663241a8d8  de69a1c2a7ec0722
canada_lotto_generator/: __init__.py  __main__.py  cli.py  generator.py  release.py
docs/: api.md  cli.md  index.md  usage.md
site/: 404.html  index.html
site/api/: index.html
site/cli/: index.html
site/search/: search_index.json
site/usage/: index.html
tests/: test_cli.py  test_generator.py  test_generator_edgecases.py  test_properties.py  test_release_utils.py
